Spring campaign ux review issues (#1363)
* Size answer cards to fit longest answer

* Keep tooltip from hanging off screen

* Skip quiz skips to next section, does not open adoption form

* Animate hero badge

* Add pulse effect to buttons

Wait for testimonial to be 30 characters before starting pulsing

* Guessed card tab color goes gray

* Allow navigation to previous sections

Set location hash for currently-viewed section
Also fix bad saved progress values

--- a/src/app/pages/hero-journey/numbered-navigator/numbered-navigator.scss
+++ b/src/app/pages/hero-journey/numbered-navigator/numbered-navigator.scss
@@ -172,6 +172,7 @@ $tooltip-breakpoint: #{$media-content-max + 10em};
         border-radius: 50%;
         border-style: solid;
         border-width: 0.15rem;
+        cursor: pointer;
         display: grid;
         height: $node-size;
         justify-content: center;
